src/tools/moc/parser.h
@@ -44,7 +44,7 @@ public:
     inline QByteArray unquotedLexem() { return symbols.at(index-1).unquotedLexem();}
     inline const Symbol &symbol() { return symbols.at(index-1);}
 
-    Q_NORETURN void error(int rollback);
+    Q_NORETURN void error(const Symbol &symbol);
     Q_NORETURN void error(const char *msg = nullptr);
     void warning(const char * = nullptr);
     void note(const char * = nullptr);
